# RE216

./: README.md  new.txt  test.txt
jalon01/src/jalon01/: client.c  server.c
jalon02/src/: CMakeLists.txt
jalon02/src/jalon02/: client.c  server.c
jalon03/src/: CMakeLists.txt
jalon03/src/jalon03/: CMakeLists.txt  client.c  server.c
jalon03/src/jalon03/src/: CMakeLists.txt  client.c  server.c
jalon03/src/jalon03/src/include/: client_tools.h  common_tools.c  common_tools.h  lines.c  server_tools.c  server_tools.h
jalon04/src/: CMakeLists.txt
jalon04/src/jalon04/: CMakeLists.txt
jalon04/src/jalon04/src/: CMakeLists.txt  client.c  server.c
jalon04/src/jalon04/src/include/: CMakeLists.txt  client_tools.c  client_tools.h  common_tools.c  common_tools.h  lines.h  server_tools.c  server_tools.h
jalon05/src/: CMakeLists.txt
jalon05/src/jalon05/src/: CMakeLists.txt  client.c  send.txt  server.c
jalon05/src/jalon05/src/include/: client_tools.c  client_tools.h  common_tools.h  main_client_functions.c  main_client_functions.h  main_server_functions.c  main_server_functions.h  server_tools.c  server_tools.h
